--- a/git/gitconfig.local.symlink.example
+++ b/git/gitconfig.local.symlink.example
@@ -3,3 +3,5 @@
         email = AUTHOREMAIL
 [credential]
         helper = GIT_CREDENTIAL_HELPER
+[url "https://LOGIN@github.com"]
+        insteadOf = https://github.com
