--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
-atom.symlink/.apm
-atom.symlink/.node-gyp
-atom.symlink/.storage
-atom.symlink/blob-store
-atom.symlink/compile-cache/
-atom.symlink/packages
-atom.symlink/storage
-atom.symlink/themes
-atom.symlink/blob-store
-atom.symlink/recovery
+# all dot folders and files
+.*
+/**/.*
 
+# git local config
 git/gitconfig.local.symlink
+
